<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView android:id="@+id/myip"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_gravity="top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CD Test"
                    android:onClick="test_button" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Clear"
                    android:onClick="clean_test" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Setup"
                    android:onClick="init_setup" />
            </LinearLayout>
            <TextView android:id="@+id/test_t0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView android:id="@+id/test_t1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView android:id="@+id/test_t2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_gravity="top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_getGatewayIP"
                    android:onClick="getGatewayIP" />
                <TextView android:id="@+id/gateway"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_gravity="top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_nmap"
                    android:onClick="nmap" />
                <TextView android:id="@+id/mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_mode"/>
                <TextView android:id="@+id/nmap_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/test_hint"/>
            </LinearLayout>
            <Spinner
                android:id = "@+id/spinner_mode"
                android:layout_width = "match_parent"
                android:layout_height ="wrap_content" >
            </Spinner >
            <TextView android:id="@+id/cmd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>





